add a real rudimental shell for no-arg case.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -7,7 +7,8 @@ set(CORELIBS ${SQLITE3_LIBRARIES})
 
 add_library(timeslot timeslot.c)
 add_library(database database.c)
+add_library(shell shell.c)
 
-set(LOCAL_LIBRARIES timeslot database)
+set(LOCAL_LIBRARIES timeslot database shell)
 
 target_link_libraries(checkin ${CORELIBS} ${LOCAL_LIBRARIES})
