--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -8,7 +8,8 @@ set(CORELIBS ${SQLITE3_LIBRARIES})
 add_library(timeslot timeslot.c)
 add_library(database database.c)
 add_library(shell shell.c)
+add_library(commands commands.c)
 
-set(LOCAL_LIBRARIES timeslot database shell)
+set(LOCAL_LIBRARIES timeslot database shell commands)
 
 target_link_libraries(checkin ${CORELIBS} ${LOCAL_LIBRARIES})
