--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -9,7 +9,8 @@ add_library(timeslot timeslot.c)
 add_library(database database.c)
 add_library(shell shell.c)
 add_library(commands commands.c)
+add_library(shell_commands shell_commands.c)
 
-set(LOCAL_LIBRARIES timeslot database shell commands)
+set(LOCAL_LIBRARIES timeslot database shell commands shell_commands)
 
 target_link_libraries(checkin ${CORELIBS} ${LOCAL_LIBRARIES})
