split shell-commands into own files in own dir.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -11,6 +11,9 @@ add_library(shell shell.c)
 add_library(commands commands.c)
 add_library(shell_commands shell_commands.c)
 
-set(LOCAL_LIBRARIES timeslot database shell commands shell_commands)
+
+add_subdirectory(shell_commands)
+
+set(LOCAL_LIBRARIES timeslot database shell commands shell_commands shell_commands_start shell_commands_stop shell_commands_list shell_commands_exit)
 
 target_link_libraries(checkin ${CORELIBS} ${LOCAL_LIBRARIES})
