let each CMakeLists.txt define its own libs
These libraries will be assigned a property, which will be read by the
CMakeLists.txt for lib/ and combined towards the libraries for the
binaries.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,5 +1,4 @@
 include_directories(${CHECKIN_SOURCE_DIR}/lib)
-link_directories(${CHECKIN_BINARY_DIR}/lib)
 
 add_executable(checkin checkin.c)
 
@@ -13,7 +12,10 @@ add_library(shell_commands shell_commands.c)
 
 
 add_subdirectory(shell_commands)
+get_directory_property(shell_commands_libraries DIRECTORY shell_commands local_libraries)
 
-set(LOCAL_LIBRARIES timeslot database shell commands shell_commands shell_commands_start shell_commands_stop shell_commands_list shell_commands_exit)
 
-target_link_libraries(checkin ${CORELIBS} ${LOCAL_LIBRARIES})
+set(LOCAL_LIBRARIES timeslot database shell commands shell_commands)
+set(LIBRARIES ${shell_commands_libraries} ${LOCAL_LIBRARIES})
+
+target_link_libraries(checkin ${CORELIBS} ${LIBRARIES})
