--- a/lib/shell_commands/CMakeLists.txt
+++ b/lib/shell_commands/CMakeLists.txt
@@ -5,3 +5,5 @@ add_library(shell_commands_start start.c)
 add_library(shell_commands_stop stop.c)
 add_library(shell_commands_list list.c)
 add_library(shell_commands_exit exit.c)
+
+set_property(DIRECTORY PROPERTY local_libraries shell_commands_start shell_commands_stop shell_commands_list shell_commands_exit)
