use linux for travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
-language: objective-c
+language: c
 script: make cmake && make
 compiler:
   - clang
   - gcc
-before_script:
-  - brew update
-  - brew install cmake
