--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,13 +6,15 @@ set(CORELIBS ${SQLITE3_LIBRARIES})
 
 add_library(timeslot timeslot.c)
 add_library(database database.c)
-add_library(shell shell.c)
 add_library(commands commands.c)
-add_library(shell_commands shell_commands.c)
 
 
 add_subdirectory(shell_commands)
 get_directory_property(shell_commands_libraries DIRECTORY shell_commands local_libraries)
+
+add_library(shell_commands shell_commands.c)
+target_link_libraries(shell_commands ${shell_commands_libraries})
+add_library(shell shell.c)
 
 
 set(LOCAL_LIBRARIES timeslot database shell commands shell_commands)
